refactor: update the created date

--- a/papers/leanimt/paper/leanimt-paper.tex
+++ b/papers/leanimt/paper/leanimt-paper.tex
@@ -86,8 +86,7 @@
 This technical document presents the LeanIMT (Lean Incremental Merkle Tree), a data structure used to represent a group of elements efficiently. The LeanIMT is designed to optimize performance and reduce gas costs, making it suitable for zero-knowledge \cite{zero_knowledge_definition} protocols and applications.
 
 \newpage
-% Created: \date{August 3, 2024}
-Created: \date{\today}
+Created: \date{September 18, 2024}
 
 Updated: \date{\today}
 
